adding github addresses to projects

--- a/client/views/urlshortener/index.html
+++ b/client/views/urlshortener/index.html
@@ -2,13 +2,7 @@
 
 <html>
   <head>
-    <title>URL Shortener Microservice | freeCodeCamp.org</title>
-    <link
-      rel="icon" 
-      type="image/png" 
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
-    />
-    <link href="/public/style.css" rel="stylesheet" type="text/css" />
+    <title>URL Shortener Microservice</title>
   </head>
 
   <body>
@@ -23,6 +17,9 @@
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
+        <p>
+          <a href="https://github.com/Zaki501/URL-Shortener/blob/gomix/server.js">Link to github code</a>
+        </p> 
       </section>
     </main>
   </body>
