--- a/client/views/timestamp/index.html
+++ b/client/views/timestamp/index.html
@@ -2,10 +2,7 @@
 
 <html>
    <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <title>Timestamp Microservice</title>   
    </head>
 
    <body>
@@ -22,6 +19,9 @@
       <h3>Example Output:</h3>
       <p>
         <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+      </p>
+      <p>
+        <a href="https://github.com/Zaki501/boilerplate-project-timestamp/blob/gomix/server.js">Link to github code</a>
       </p>
     </div>
   </body>
